syntax = "proto2";

import "google/protobuf/any.proto";

package graph;
option go_package = "pipegraph/internal/graph";

message NodeState {
    message IdleState {
        enum IdlePlan {
            None = 0;
            Scheduled = 1;
            Skipped = 2;
        }

        optional bool IsReady = 1;
        optional IdlePlan Plan = 2;
    }

    message InProgressState {
        enum InProgressStatus {
            Scheduled = 0; // NotImplemented
            Running = 1;
            Stopping = 2;
            Skipping = 3;
        }

        optional InProgressStatus Status = 1;
    }

    message DoneState {
        optional string Error = 1;
        required bool IsStopped = 3;
        required bool IsSkipped = 4;
        optional bool FromIdle = 5;
    }

    optional uint64 Id = 1;
    oneof State {
        IdleState Idle = 2;
        InProgressState InProgress = 3;
        DoneState Done = 4;
    }
}

message Config {
    repeated NodeConfig Nodes = 1;
    repeated EdgeConfig Edges = 2;
}

message Position {
    optional int32 X = 1;
    optional int32 Y = 2;
}

message NodeConfig {
    optional uint64 Id = 1;
    optional string Name = 2;
    optional google.protobuf.Any Job = 3;
    optional Position Position = 4;
    repeated string Inputs = 5;
    repeated string Outputs = 6;
}

message EdgeConfig {
    optional uint64 FromNodeId = 1;
    optional uint64 ToNodeId = 2;
    optional uint64 FromPort = 3; // 1-indexed
    optional uint64 ToPort = 4;   // 1-indexed
}

enum SyncType {
    InitNode = 1;
    InitEdge = 2;
    InitDone = 3;
    UpdateState = 4;
    Reset = 5;
    Error = 6;
}

message SyncResponse {
    optional SyncType Type = 1;
    optional graph.NodeConfig NodeConfig = 2;
    optional graph.NodeState NodeState = 3;
    optional graph.EdgeConfig EdgeConfig = 4;
    map<string, string> Error = 5;
}
